--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,32 @@ p {
     text-indent: 2em;
 }
 
+/* Smaller text on mobile */
+
+/* Mobile: reduce text size only inside .column */
+@media (max-width: 600px) {
+    .column p {
+    font-size: 1.4rem;
+  }
+
+  .column h1 {
+    font-size: 2.4rem;
+  }
+
+  .column h2 {
+    font-size: 2rem;
+  }
+
+  .column h3,
+  .column h4 {
+    font-size: 1.6rem;
+  }
+
+  .column .para blockquote p {
+    font-size: 1.4rem;
+  }
+}
+
 .column .para p  {
     text-align: justify;
     hyphens: auto;
